err/emencia-recipe-drdump.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dr_dump-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/drdump'...
Compiling './lib/python3.5/site-packages/drdump/builder.py'...
***   File "./lib/python3.5/site-packages/drdump/builder.py", line 177
    print str(err)  # will print something like "option -a not recognized"
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/drdump/dependancies.py'...
***   File "./lib/python3.5/site-packages/drdump/dependancies.py", line 89
    print dump_manager.get_dump_order(['django-cms', 'porticus'])
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/drdump/maps'...
Listing './lib/python3.5/site-packages/emencia_recipe_drdump'...
Compiling './lib/python3.5/site-packages/emencia_recipe_drdump/recipe_interface.py'...
***   File "./lib/python3.5/site-packages/emencia_recipe_drdump/recipe_interface.py", line 95
    os.chmod(dumpscript_path, 0755)
                                 ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/emencia_recipe_drdump-0.3.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zc'...
Listing './lib/python3.5/site-packages/zc/buildout'...
Listing './lib/python3.5/site-packages/zc/recipe'...
Listing './lib/python3.5/site-packages/zc/recipe/egg'...
Listing './lib/python3.5/site-packages/zc.buildout-2.10.0.dist-info'...
Listing './lib/python3.5/site-packages/zc.recipe.egg-2.0.5.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
